syntax = "proto3";

package order.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders",
      body: "*",
    };
  }

  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {
    option (google.api.http) = {get: "/v1/orders/{id}"};
  }

  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse) {
    option (google.api.http) = {
      put: "/v1/orders/{order.id}",
      body: "*",
    };
  }

  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse) {
    option (google.api.http) = {delete: "/v1/orders/{id}"};
  }

  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse) {
    option (google.api.http) = {get: "/v1/orders"};
  }
}

message Order {
  string id = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
  string recipient_full_name = 2 [(buf.validate.field).string.min_len = 1];
  string email_address = 3 [(buf.validate.field).string.min_len = 1];
  string delivery_address = 4 [(buf.validate.field).string.min_len = 1];
  string phone = 5 [(buf.validate.field).string.min_len = 1];
  OrderStatus status = 6;
  repeated OrderLine order_lines = 7;
}

message OrderLine {
  string id = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
  string order_id = 2;
  string product_id = 3;
  string price = 4;
  int32 quantity = 5 [(buf.validate.field).int32.gt = 0];
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_RECEIVED = 1;
  ORDER_STATUS_PROCESSING = 2;
  ORDER_STATUS_PICKING = 3;
  ORDER_STATUS_PACKED = 4;
  ORDER_STATUS_READY_SHIPMENT = 5;
  ORDER_STATUS_IN_TRANSIT = 6;
  ORDER_STATUS_DELIVERED = 7;
  ORDER_STATUS_CANCELLED = 8;
  ORDER_STATUS_ON_HOLD = 9;
  ORDER_STATUS_BACKORDERED = 10;
  ORDER_STATUS_RETURNED = 11;
  ORDER_STATUS_COMPLETED = 12;
}

message CreateOrderRequest {
  Order order = 1;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message UpdateOrderRequest {
  Order order = 1;
}

message UpdateOrderResponse {
  Order order = 1;
}

message DeleteOrderRequest {
  string id = 1;
}

message DeleteOrderResponse {}

message ListOrdersRequest {}

message ListOrdersResponse {
  repeated Order orders = 1;
}
